--- a/testFinal.html
+++ b/testFinal.html
@@ -26,7 +26,7 @@
 </head>
 <body class="text-white font-mono min-h-screen p-2 sm:p-6 bg-black bg-opacity-80">
  <div id="key-modal" class="fixed inset-0 bg-black bg-opacity-90 flex flex-col items-center justify-center text-center px-4">
-    <h2 class="text-3xl text-yellow-400 neon-text mb-4">Ingrese la clave 2º Discipulado</h2>
+    <h2 class="text-3xl text-yellow-400 neon-text mb-4">Ingrese la clave Exámen Final</h2>
     <input id="access-key" type="password" placeholder="Clave" class="p-3 rounded text-black text-lg mb-4 w-full max-w-xs" />
     <button id="key-submit" class="bg-blue-600 hover:bg-blue-800 px-8 py-3 rounded text-white text-xl font-bold neon-button w-full max-w-xs">
       Validar
